# RobotArm

./: .gitignore  CMakeLists.txt  README.md  build.sh  create_app.sh  doublependulum.desktop  ideas  robotarm.desktop  robotarm.html  robotarm.js  robotarm.wasm  run.sh
.cache/clangd/index/: UI.h.B6B4A8D674154EDE.idx  event_checks.h.69D07AC3C56ED5EA.idx  helper_variables.h.D32FB11C1986F83E.idx  main.cpp.59CCDA9B0949F5C2.idx  pendulum.h.6CF18A767FE4F657.idx  pendulum_dynamics.h.89A3370E06B7DCF3.idx  sim_loop.h.C23C81DFB1D63377.idx
include/: UI.h  event_checks.h  helper_variables.h  pendulum.h  pendulum_dynamics.h  sim_loop.h
src/: UI.cpp  event_checks.cpp  helper_variables.cpp  main.cpp  pendulum.cpp  pendulum_dynamics.cpp  sim_loop.cpp
tests/: pendulum_tests.cpp
